# umirtx

./: README.md
pointcloud_demo/: CMakeLists.txt  package.xml
pointcloud_demo/src/: randompoints.cpp
umirtx_bringup/: CMakeLists.txt  package.xml
umirtx_bringup/launch/: bringup.launch  bringup_lunar.launch
umirtx_description/: CMakeLists.txt  README.txt  licence.txt  package.xml  package.xml~
umirtx_description/launch/: umirtx.launch  umirtx.launch~  umirtx_fake.launch  umirtx_fake.launch~  upload_description.launch  upload_description.launch~
umirtx_description/meshalap/: downloadmeshes.ftp  frame1.stp  frame2.stp  frame3.fcstd  frame3.stp  frame4.stp  frame5.fcstd  frame5.stp  frame6.fcstd  frame6.stp  frame7.fcstd  frame7.stp  uploadmeshes.ftp
umirtx_description/meshes/: frame1.stl  frame1a.stl  frame2.stl  frame3.stl  frame4.stl  frame5.stl  frame6.stl  frame7.stl
umirtx_description/urdf/: UMI_RTX_URDF.urdf
umirtx_hardware/: CMakeLists.txt  README.txt  package.xml
umirtx_hardware/config/: controllers.yaml
umirtx_hardware/include/: umirtx_hardware.h
umirtx_hardware/include/umirtx_hardware/: jackal_hardware.h
umirtx_hardware/launch/: base.launch  base2.launch  default_controllers.launch  joint_trajectory_controllers.yaml  umirtx_node.launch
umirtx_hardware/src/: umirtx_base.cpp  umirtx_hardware.cpp
umirtx_moveit_lunar/: .setup_assistant  CMakeLists.txt  package.xml
umirtx_moveit_lunar/config/: UMI_RTX_BM14W4.srdf  controllers.yaml  fake_controllers.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml
umirtx_moveit_lunar/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  xxx.launch
